# deltaInventory

./: Cargo.toml  init.sh  run_with_pyspark.py  run_with_python.py
python/: create_tables.py  pyspark_tests.py  requirements.txt  run_with_pyspark.py
python/tables/golden-goose/_delta_log/: .00000000000000000000.json.crc
src/: lib.rs  main.rs  s3.rs
tests/: integration_tests.rs
