[package]
name = "delta_profiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltalake = { version = "0.17.3", features = ["s3"] }  # Check for the latest version on crates.io
async-std = "1.10.0"  # Required for async runtime
futures = "0.3"
colored = "2.1.0"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
datafusion = "36.0.0" # for compat with deltalake aka delta-rs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.2.0"
aws-credential-types = "1.2.0" 
tokio = { version = "1.37.0", features = ["full"] } 
url = "2.5.0"
serde_derive = "1.0.200"
deltalake-core = "0.17.3"
object_store = "0.10.0"


[[bin]]
name = "delta_profiler_bin"
path = "src/main.rs"

